--- a/films/templates/films/film_list.html
+++ b/films/templates/films/film_list.html
@@ -359,7 +359,7 @@
             });
         });
 
-        $("#text-id").change(function(event) {
+        $("#text-id").keyup(function(event) {
             event.preventDefault();
             var category = $('#category-id').val()
             var genre = $('#genre-id').val()
