--- a/films/templates/films/film_list.html
+++ b/films/templates/films/film_list.html
@@ -264,7 +264,7 @@
                                                     {% endfor %}
                                                 </div>
                                                 <div class="main__name">
-                                                    {{ film.title }} {{ film.pk }}
+                                                    {{ film.title }}
                                                 </div>
                                             </a>
                                         {% endfor %}
